Page MenuHome GnuPG

GPGME: Keylist mode sigs combined with secret does not work (anymore?)
Closed, ResolvedPublic

Description

Noticed this while working on T3579 for kleopatra. For secret keys I don't get the uid signatures. I added display of user id signatures to gpgme's run-keylist with

5ba1cbdf39efd90c7987bfc2bc030b6504e70076

./run-keylist --secret --sigs 1FDF723CF462B6B1

does not show signatures

./run-keylist --sigs 1FDF723CF462B6B1

Shows them.

Event Timeline

aheinecke lowered the priority of this task from Normal to Low.Dec 7 2017, 2:07 PM

Prio low, as I noticed that Kleopatra already had some code in there to merge a secret with a public key in a keylisting. This can be used for me.

Just checked. This does not seem to be a regression.

We could add pass the --with-sig-check option which would make it quite easy.

ikloecker added a subscriber: ikloecker.

Taking since I ran into this problem while working on T5174. In Kleopatra, if one opens the certificate details of one's own keys (i.e. secret key is available), then the tags vanish from the key list.